# hostd-mon

./: .gitignore  README.md  compose-master.yml  compose-satellite.yml  env.sh
backend/: .env  Dockerfile  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts  initdb.ts  server.ts
backend/src/config/: index.ts
backend/src/controllers/: index.ts
backend/src/middlewares/: requestLogger.ts
backend/src/notifier/: notify-sms.ts
backend/src/poller/: extramon-notifier.ts  extramon-worker.ts  index.ts  rhp-notifier.ts  rhp-worker.ts
backend/src/routes/: index.ts
backend/src/routes/auth/: index.ts
backend/src/routes/host/: index.ts
backend/src/routes/host/uptime/: index.ts
backend/src/routes/satellites/: index.ts
backend/src/routes/user/: index.ts
backend/src/utils/: http_code_helper.ts  logger.ts  requestLogger.ts
backend/tools/: populate-extramon-hosts.ts
extramon/: .gitignore
extramon/app/: .gitignore  CMakeLists.txt  docker-compose.yml
extramon/app/builders/windows/: .gitignore  build.sh
extramon/app/debian/: .gitignore  README  README.Debian  README.source  changelog  control  copyright  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  siawatch-app.cron.d.ex  siawatch-app.doc-base.EX
extramon/app/gui/: InitializerWidget.hpp  MainWindow.hpp  SatPinger.cpp  SatPinger.hpp  SatellitesPanel.hpp  Watchdog.hpp  fill_random.hpp  main.c  main.cpp  utils.hpp
extramon/app/imgs/flags/: README.md
extramon/app/src/: fill_random.h  main.c  ping_satellite.c  ping_satellite.h  sha256.h  urls.c  urls.h
extramon/backend/: .env  bun.lockb  package-lock.json  package.json  tsconfig.json
extramon/backend-bun/: Dockerfile  README.md  package.json
extramon/backend-bun/src/: app.ts  client.ts
extramon/backend-bun/src/utils/: requestLogger.ts
extramon/backend/src/: app.ts  client.ts  invoices.ts  master.ts
extramon/backend/src/utils/: logger.ts  requestLogger.ts
frontend/: Dockerfile  index.html  package-lock.json  package.json  serve.sh  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: index.ts
frontend/src/api/auth/: index.ts
frontend/src/api/host/: index.ts
frontend/src/api/satellites/: index.ts
frontend/src/api/user/: index.ts
frontend/src/components/: Button.tsx  HostsList.tsx  Panel.tsx  PrivateRoute.tsx  RouterLink.tsx  Title.tsx
frontend/src/components/account/: AccountSettingsForm.tsx
frontend/src/components/alerts/: AlertsTable.tsx
frontend/src/components/demo/: Chart.tsx  Dashboard2.tsx  Deposits.tsx  ListItems.tsx  Orders.tsx
frontend/src/components/host/: DeleteHostButton.tsx  HostConfigForm.tsx  HostsList.tsx
frontend/src/components/host/uptime/: UptimeChart.tsx  UptimeCharts.tsx
frontend/src/components/routing/: PrivateRoute.tsx
frontend/src/components/sidebar/: SidebarHostsList.tsx  SidebarMenu.tsx  SidebarMenuItem.tsx  SidebarNavigation.tsx
frontend/src/components/sidebar/menu/: SidebarMenu.tsx  SidebarMenuItem.tsx
frontend/src/config/: index.ts
frontend/src/context/: HostDmonContext.tsx  SidebarContext.tsx
frontend/src/hooks/: useForm.ts
frontend/src/pages/: DrawerView.tsx  Home.tsx  Login.tsx
frontend/src/pages/account/: AccountOverview.tsx  AccountSettingsForm.tsx
frontend/src/pages/alerts/: Alerts.tsx
frontend/src/pages/errors/: NotFound.tsx
frontend/src/pages/host/: AddHost.tsx  EditHost.tsx  HostAlerts.tsx  HostOverview.tsx
frontend/src/pages/host/uptime/: UptimeChart.tsx  UptimePanel.tsx
frontend/src/pages/users/: ManageUsers.tsx
frontend/src/styles/: index.css
frontend/src/types/: Alert.ts  Duration.ts  Host.ts  Satellite.ts  Uptime.ts  User.ts  UserAlert.ts
frontend/src/utils/: arithmeticMean.ts  formatDate.ts  subtractTimeFromDate.ts  sum.ts
frontend/src/utils/hostsParams/: getErrorMessageIfHostParamsNotValid.ts
nginx/master/: nginx.conf
nginx/satellite/: nginx.conf
satellite/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
satellite/api/: api.go  endpoints.go  types.go
satellite/benchmark/: benchmark.go
satellite/rhp/v2/: rhp.go
satellite/rhp/v3/: rhp.go
